--- a/default_cool.html
+++ b/default_cool.html
@@ -1,6 +1,5 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -405,3 +404,5 @@ layout: default
     <!--  main script  -->
     <script src="js/custom.js"></script>
 </body>
+
+</html>
