--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+---
 
 <head>
     <meta charset="utf-8">
@@ -98,20 +99,20 @@
             <div class="col-md-12">
                 <ul class="timeline">
                     {% for publication in site.publications %}
-                    <li class="timeline-event" data-aos="fade-up">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">{{publication.time}}</p>
-                            <h3>{{publication.title}}</h3>
-                            <h4>{{publication.extra}}</h4>
+                      <li class="timeline-event" data-aos="fade-up">
+                          <label class="timeline-event-icon"></label>
+                          <div class="timeline-event-copy">
+                              <h3>HERE,Danke! GmbH</h3>
                           </div>
-                    </li>
+                      </li>
+                    {% else %}
+                      <h3>No Publicationsww</h3>
                     {% endfor %}
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
+                            <h3>HERE,Danke! GmbH</h3>
                             <h4>eines Web-Studios</h4>
                             <p><strong>Projektmanagement mit Scrum</strong>
                                 <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
@@ -404,5 +405,3 @@
     <!--  main script  -->
     <script src="js/custom.js"></script>
 </body>
-
-</html>
