--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
                           </div>
                       </li>
                     {% else %}
-                      <h3>No Publicationsww</h3>
+                      <h3>No Publicationswwee</h3>
                     {% endfor %}
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
