--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ layout: default
             </div>
             <div class="col-md-12">
                 <ul class="timeline">
-                    {% for publication in site.publications %}
+                    {% for publication in site.posts %}
                       <li class="timeline-event" data-aos="fade-up">
                           <label class="timeline-event-icon"></label>
                           <div class="timeline-event-copy">
