--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@ layout: default
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">{{publication.time}}</p>
-                            <h3>HERE,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <p class="timeline-event-thumbnail">{{publication.where}}</p>
+                            <h3>{{publication.title}}</h3>
+                            <h4>{{publication.extra}}</h4>
+                            <p><strong>{{publication.authors}}</strong>
+                                <br>{{publication.description}}</p>
                         </div>
                     </li>
                     {% else %}
