--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
                             <h3>{{publication.title}}</h3>
                             <h4>{{publication.extra}}</h4>
                             <p><strong>{{publication.authors}}</strong>
-                                <br>{{publication.description}}</p>
+                                <br>{{publication.content}}</p>
                         </div>
                     </li>
                     {% else %}
