--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: default
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
-                <h1 class="size-50">My <br /> Projects</h1>
+                <h1 class="size-50">Blog posts</h1>
             </div>
             <!-- main container -->
             <div class="main-container portfolio-inner clearfix">
